syntax = "proto3";

package pb;

message ServiceTag {
  string Key = 1;
  string Value = 2;
}
message NodeService {
  string ID = 1;
  string Name = 2;
  string NetworkAddress = 3;
  string Peer = 4;
  repeated ServiceTag Tags = 5;
}
message Peer {
  string ID = 1;
  string Hostname = 3;
  MemoryUsage MemoryUsage = 7;
  ComputeUsage ComputeUsage = 8;
  string Runtime = 9;
  repeated NodeService HostedServices = 10;
  repeated string  Services = 11;
  int64 Started = 12;
  int64 LastContact = 13;
}

message ComputeUsage {
  int64 Cores = 1;
  int64 Goroutines = 2;
}
message MemoryUsage {
  uint64 Alloc = 1;
  uint64 TotalAlloc = 2;
  uint64 Sys = 3;
  uint32 NumGC = 4;
}

message PeerList {
  repeated Peer Peers = 1;
}

message ListMembersInput{}
message ListMembersOutput{
  repeated Peer Peers = 1;
}
message GetEndpointsInput{
  string ServiceName = 1;
}
message GetEndpointsOutput{
  repeated NodeService NodeServices = 1;
}
message RegisterServiceInput{
  string ServiceID = 1;
  string ServiceName = 2;
  string NetworkAddress = 3;
}
message RegisterServiceOutput{}
message UnregisterServiceInput{
  string ServiceID = 1;
}
message UnregisterServiceOutput{}

message AddServiceTagInput{
  string ServiceID = 1;
  string TagKey = 2;
  string TagValue = 3;
}
message AddServiceTagOutput{}

message RemoveServiceTagInput{
  string ServiceID = 1;
  string TagKey = 2;
}
message RemoveServiceTagOutput{}

service DiscoveryService {
  rpc ListMembers(ListMembersInput) returns (ListMembersOutput);
  rpc GetEndpoints(GetEndpointsInput) returns (GetEndpointsOutput);
  rpc StreamEndpoints(GetEndpointsInput) returns (stream GetEndpointsOutput);
  rpc RegisterService(RegisterServiceInput) returns (RegisterServiceOutput);
  rpc UnregisterService(UnregisterServiceInput) returns (UnregisterServiceOutput);
  rpc AddServiceTag(AddServiceTagInput) returns (AddServiceTagOutput);
  rpc RemoveServiceTag(RemoveServiceTagInput) returns (RemoveServiceTagOutput);
}